--- a/src/app/modules/meteo-stations/components/view-station/view-station.component.html
+++ b/src/app/modules/meteo-stations/components/view-station/view-station.component.html
@@ -3,10 +3,10 @@
   class="flex-row flex-center spacer"
 >
   <mat-button-toggle-group [(ngModel)]="viewType">
-    <mat-button-toggle value="view">Overview</mat-button-toggle>
-    <mat-button-toggle value="edit">Edit</mat-button-toggle>
-    <mat-button-toggle value="sensors">Sensors</mat-button-toggle>
-    <mat-button-toggle value="readings">Readings</mat-button-toggle>
+    <mat-button-toggle value="view"><span>Overview</span></mat-button-toggle>
+    <mat-button-toggle value="edit"><span>Edit</span></mat-button-toggle>
+    <mat-button-toggle value="sensors"><span>Sensors</span></mat-button-toggle>
+    <mat-button-toggle value="readings"><span>Readings</span></mat-button-toggle>
   </mat-button-toggle-group>
 </div>
 <ng-template #spacer>
