--- a/src/app/modules/readings/components/station-readings/station-readings.component.html
+++ b/src/app/modules/readings/components/station-readings/station-readings.component.html
@@ -28,7 +28,7 @@
       <div class="flex-row">
         <div style="margin-left: auto">
           <button
-            id="newBtn"
+            id="newReadingBtn"
             style="margin-right: 20px; margin-top: 5px; margin-bottom: 5px"
             (click)="onNew(sensor.id)"
             color="accent"
