--- a/src/app/modules/sensors/components/edit-sensor-modal/edit-sensor-modal.component.html
+++ b/src/app/modules/sensors/components/edit-sensor-modal/edit-sensor-modal.component.html
@@ -1,7 +1,7 @@
 <h1>Sensor</h1>
 <form [formGroup]="sensorForm" class="flex-column">
   <mat-form-field>
-    <mat-label>lowerLimit</mat-label>
+    <mat-label>Lower Limit</mat-label>
     <input
       type="number"
       matInput
@@ -13,7 +13,7 @@
     </mat-error>
   </mat-form-field>
   <mat-form-field>
-    <mat-label>upperLimit</mat-label>
+    <mat-label>Upper limit</mat-label>
     <input
       type="number"
       matInput
@@ -26,7 +26,7 @@
   </mat-form-field>
 
   <mat-form-field>
-    <mat-label>description</mat-label>
+    <mat-label>Description</mat-label>
     <input
       type="text"
       matInput
