--- a/src/app/modules/readings/components/readings-list/readings-list.component.html
+++ b/src/app/modules/readings/components/readings-list/readings-list.component.html
@@ -16,10 +16,10 @@
   <ng-container matColumnDef="details">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let reading" style="text-align: end">
-      <button mat-button color="primary" (click)="onEditReading(reading)">
+      <button id="edit" mat-button color="primary" (click)="onEditReading(reading)">
         <mat-icon>edit</mat-icon>
       </button>
-      <button mat-button color="warn" (click)="deleteReading(reading)">
+      <button id="delete" mat-button color="warn" (click)="deleteReading(reading)">
         <mat-icon>delete</mat-icon>
       </button>
     </td>
@@ -28,3 +28,5 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
+
+
