--- a/src/app/modules/welcome/pages/welcome/welcome.component.html
+++ b/src/app/modules/welcome/pages/welcome/welcome.component.html
@@ -10,7 +10,7 @@
   </button>
 </mat-toolbar>
 <div class="header">International Education Program Veleri-OI IoT School</div>
-<div class="subheader">Case study of the IoT project "Cov protect System</div>
+<div class="subheader">Case study of the IoT project "Cov protect System"</div>
 <div style="height:50px"></div>
 <div *ngIf="meteoStations$ | async as meteoStations" class="map-container">
   <agm-map
