--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -2,9 +2,10 @@
   <h1>Log in</h1>
 
   <form [formGroup]="logInForm" class="flex-column">
-    <mat-form-field style="width:100%; height:80px">
+    <mat-form-field style="width: 100%; height: 80px">
       <mat-label>Email</mat-label>
       <input
+        id="emailInput"
         type="email"
         matInput
         formControlName="email"
@@ -22,9 +23,10 @@
         Email is <strong>required</strong>
       </mat-error>
     </mat-form-field>
-    <mat-form-field style="width:100%; height:80px">
+    <mat-form-field style="width: 100%; height: 80px">
       <mat-label>Password</mat-label>
       <input
+        id="passwordInput"
         type="password"
         matInput
         formControlName="password"
@@ -34,11 +36,27 @@
         Please enter your password
       </mat-error>
     </mat-form-field>
-    <div class="flex-row" style="width: 100%; margin-top: 50px; justify-content: space-between">
-      <button type="button" mat-raised-button (click)="onCancel()" color="primary"  id="cancelBtn">
+    <div
+      class="flex-row"
+      style="width: 100%; margin-top: 50px; justify-content: space-between"
+    >
+      <button
+        type="button"
+        mat-raised-button
+        (click)="onCancel()"
+        color="primary"
+        id="cancelBtn"
+      >
         Cancel
       </button>
-      <button type="submit" mat-raised-button (click)="onLogIn()" color="primary" [disabled]="logInForm.invalid" id="loginBtn">
+      <button
+        type="submit"
+        mat-raised-button
+        (click)="onLogIn()"
+        color="primary"
+        [disabled]="logInForm.invalid"
+        id="loginBtn"
+      >
         Log in
       </button>
     </div>
